--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -14,7 +14,7 @@ body{
 
 .nav-link{
     padding: 0.25rem 0;
-    margin-left : 1rem;
+    margin : 1rem;
     font-weight: 500;
     font-size: 1.1rem;
     color:  rgba(255,255,255,0.7);
