--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,8 +1,8 @@
 
 <% layout('layouts/boilerplate') %>
-<div id="cluster-map"></div>
-    <h1>All Campgrounds</h1>
-
+    <div id="cluster-map" class="position-absolute top-0 start-0 d-block"></div>
+    
+    <h1 class="">All Campgrounds</h1>
     <% campgrounds.forEach((campground,i)=>{%>
         <div class="card mb-3">
             <div class="row">
