--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,20 +16,21 @@
 
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
-            <h3 class="float-md-start">YelpCamp</h3>
-            <nav class="nav nav-masthead float-md-end ">
+            <div class="row">
+            <h3 class="float-md-center float-start col-12 col-md-2"><span class="nav-brand">YelpCamp</span></h3>
+            <nav class="nav nav-masthead float-md-end col-12 col-md-10">
                 <ul>
-                    <li> <a class="nav-link active link" aria-current="page" href="/">Home</a></li>
-               
-                <li><a class="nav-link link" href="/campgrounds">Campgrounds</a></li>
-                <% if(!currentUser) { %>
-                <li><a class="nav-link link" href="/login">Login</a></li>
-                <li><a class="nav-link link" href="/register">Register</a></li>
-                <% } else { %>
-                <li><a class="nav-link link" href="/logout">Logout</a></li>
-                <% } %>
-            </ul>
+                    <li class="col"> <a class="nav-link active link" aria-current="page" href="/">Home</a></li>
+                    <li class="col"><a class="nav-link link" href="/campgrounds">Campgrounds</a></li>
+                    <% if(!currentUser) { %>
+                    <li class="col"><a class="nav-link link" href="/login">Login</a></li>
+                    <li class="col"><a class="nav-link link" href="/register">Register</a></li>
+                    <% } else { %>
+                    <li class="col"><a class="nav-link link" href="/logout">Logout</a></li>
+                    <% } %>
+                </ul>
             </nav>
+        </div>
         </header>
 
         <main class="px-3">
