--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,12 +1,21 @@
 #cluster-map{
     width:100%;
-    height:40vh;
+    height:35vh;
 }
 
 #map{
     width:100%;
     height:30vh;
 }
-h1{
-    margin-top: 250px;
+
+#cluster-map{
+    position: relative !important;
 }
+
+#cluster-map:before{
+    right: -999em;
+    display: block;
+    position: absolute;
+    width: 999em;
+}
+
