--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,15 +1,33 @@
-
 <% layout('layouts/boilerplate') %>
-    <div id="cluster-map" class="position-absolute top-0 start-0 d-block"></div>
-    
-    <h1 class="">All Campgrounds</h1>
+    <div id="cluster-map"></div>
+
+    <h1 class="text-center my-3">All Campgrounds</h1>
+
+    <form action="/search" method="GET">
+        <div class="input-group my-3 justify-content-center">
+            <span class="input-group-text" id="addon-wrapping">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-search"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                </svg>
+            </span>
+            <div class="col-10 col-md-8 col-lg-6">
+                <input type="text" class="form-control" placeholder="Search Campground" aria-label="Username"
+                    aria-describedby="addon-wrapping" name="searchCampground" id="searchCampground">
+            </div>
+            <button class="btn btn-secondary">Search</button>
+        </div>
+    </form>
+
+
     <% campgrounds.forEach((campground,i)=>{%>
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
                     <% if(campground.images[0].url){ %>
                         <img class="img-fluid" src="<%=campground.images[0].url%>" alt="">
-                    <% } %>
+                        <% } %>
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -37,8 +55,8 @@
         </div>
         <% }) %>
 
-<script>
-    const mapToken = '<%-process.env.MAPBOX_TOKEN%>' 
-    const campgrounds = {features : <%- JSON.stringify(campgrounds)%>}
-</script>
-<script src="/javascripts/clusterMap.js"></script>
+            <script>
+                const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
+                const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+            </script>
+            <script src="/javascripts/clusterMap.js"></script>
