--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
     <div id="cluster-map"></div>
 
-    <h1 class="text-center my-3">All Campgrounds</h1>
+    <h1 class="text-center my-3">All Places</h1>
 
     <form action="/search" method="GET">
         <div class="input-group my-3 justify-content-center">
@@ -13,7 +13,7 @@
                 </svg>
             </span>
             <div class="col-10 col-md-8 col-lg-6">
-                <input type="text" class="form-control" placeholder="Search Campground" aria-label="Username"
+                <input type="text" class="form-control" placeholder="Search Place" aria-label="Username"
                     aria-describedby="addon-wrapping" name="searchCampground" id="searchCampground">
             </div>
             <button class="btn btn-secondary">Search</button>
