--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="/stylesheets/home.css">
-    <title>YelpCamp</title>
+    <title>TravelLure</title>
 </head>
 
 <body class="d-flex text-center text-white bg-dark vh-100">
@@ -17,11 +17,11 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div class="row">
-            <h3 class="float-md-center float-start col-12 col-md-2"><span class="nav-brand">YelpCamp</span></h3>
+            <h3 class="float-md-center float-start col-12 col-md-2"><span class="nav-brand">TravelLure</span></h3>
             <nav class="nav nav-masthead float-md-end col-12 col-md-10">
                 <ul>
                     <li class="col"> <a class="nav-link active link" aria-current="page" href="/">Home</a></li>
-                    <li class="col"><a class="nav-link link" href="/campgrounds">Campgrounds</a></li>
+                    <li class="col"><a class="nav-link link" href="/campgrounds">Places</a></li>
                     <% if(!currentUser) { %>
                     <li class="col"><a class="nav-link link" href="/login">Login</a></li>
                     <li class="col"><a class="nav-link link" href="/register">Register</a></li>
@@ -34,16 +34,16 @@
         </header>
 
         <main class="px-3">
-            <h1>YelpCamp</h1>
-            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+            <h1>TravelLure</h1>
+            <p class="lead"> Welcome to TravelLure! <br> Jump right in and explore our many good places. <br>
                 Feel free to share some of your own and comment on others!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold ">View
-                Campgrounds</a>
+                places</a>
         </main>
 
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2022 YelpCamp </p>
+            <p>&copy; 2022 TravelLure </p>
         </footer>
     </div>
 
