--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark text-light mt-auto">
     <div class="container py-3">
-        <span class="text-muted">&copy;YelpCamp2021 </span>
+        <span class="text-muted">&copy;TravelLure2022</span>
     </div>
 </footer>
