--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,22 +3,6 @@
 
     <h1 class="text-center my-3">All Places</h1>
 
-    <form action="/search" method="GET">
-        <div class="input-group my-3 justify-content-center">
-            <span class="input-group-text" id="addon-wrapping">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-search"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                </svg>
-            </span>
-            <div class="col-10 col-md-8 col-lg-6">
-                <input type="text" class="form-control" placeholder="Search Place" aria-label="Username"
-                    aria-describedby="addon-wrapping" name="searchCampground" id="searchCampground">
-            </div>
-            <button class="btn btn-secondary">Search</button>
-        </div>
-    </form>
 
 
     <% campgrounds.forEach((campground,i)=>{%>
@@ -45,7 +29,7 @@
                                 <%= campground.location %>
                             </small>
                             <div>
-                                <a href="/campgrounds/<%= campground._id%>" class="btn btn-primary my-3">View <%=
+                                <a target="_blank" href="/campgrounds/<%= campground._id%>" class="btn btn-primary my-3">View <%=
                                         campground.title %></a>
                             </div>
                         </div>
